--- a/Plugin/PluginTranslucentRM.vcxproj.filters
+++ b/Plugin/PluginTranslucentRM.vcxproj.filters
@@ -1,14 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ResourceCompile Include="Plugin.rc" />
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{7ee15eec-2367-4fdd-8101-d6828e13b098}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{8e64fc14-ebfb-4f1f-bd3a-dcb140f3cad1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{9f619324-55a5-4873-b48c-79283c2f76bc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="version.h" />
-    <ClInclude Include="StdAfx.h" />
-    <ClInclude Include="PluginTranslucentRM.h" />
+    <ClInclude Include="PluginTranslucentRM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StdAfx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PluginTranslucentRM.cpp" />
+    <ClCompile Include="PluginTranslucentRM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StdAfx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Plugin.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
